// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Link authenticate=false 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href="https://plus4u.net/uve"
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  https://plus4u.net/uve
</a>
`;

exports[`UU5.Bricks.Link authenticate=true 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href="https://plus4u.net/uve?access_token=token-for-tests"
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  https://plus4u.net/uve
</a>
`;

exports[`UU5.Bricks.Link checkGrammar=false 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link checkGrammar=true 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link checkHighlight=false 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link checkHighlight=true 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link checkSpaces=false 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link checkSpaces=true 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link className="my-classname" 1`] = `
<a
  className="uu5-bricks-link my-classname"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema="brown" 1`] = `
<a
  className="color-schema-brown uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema="brown-rich" 1`] = `
<a
  className="color-schema-brown-rich uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema="cyan" 1`] = `
<a
  className="color-schema-cyan uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema="cyan-rich" 1`] = `
<a
  className="color-schema-cyan-rich uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema="default" 1`] = `
<a
  className="color-schema-default uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema="green" 1`] = `
<a
  className="color-schema-green uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema="green-rich" 1`] = `
<a
  className="color-schema-green-rich uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema="grey" 1`] = `
<a
  className="color-schema-grey uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema="grey-rich" 1`] = `
<a
  className="color-schema-grey-rich uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema="orange" 1`] = `
<a
  className="color-schema-orange uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema="orange-rich" 1`] = `
<a
  className="color-schema-orange-rich uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema="pink" 1`] = `
<a
  className="color-schema-pink uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema="pink-rich" 1`] = `
<a
  className="color-schema-pink-rich uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema="purple" 1`] = `
<a
  className="color-schema-purple uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema="purple-rich" 1`] = `
<a
  className="color-schema-purple-rich uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema="red" 1`] = `
<a
  className="color-schema-red uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema="red-rich" 1`] = `
<a
  className="color-schema-red-rich uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema="yellow" 1`] = `
<a
  className="color-schema-yellow uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link colorSchema="yellow-rich" 1`] = `
<a
  className="color-schema-yellow-rich uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link content="This is Content from ContentMixin" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</a>
`;

exports[`UU5.Bricks.Link content=12345 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  12345
</a>
`;

exports[`UU5.Bricks.Link controlled=false 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link controlled=true 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link default props 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link disabled=false 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link disabled=true 1`] = `
<a
  className="uu5-bricks-link uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link docKit examples UU5.Bricks.Link should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Link
    href="http://www.unicorn.com/"
    id="uuID02"
    key="uuID02"
    target="_blank"
  >
    www.unicorn.com
  </Link>
</div>
`;

exports[`UU5.Bricks.Link download=false 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link download=true 1`] = `
<a
  className="uu5-bricks-link"
  download={true}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link dynamic=false 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link dynamic=true 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link hidden=false 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link hidden=true 1`] = `
<a
  className="uu5-bricks-link uu5-common-hidden"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link href="#about" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href="http://example.com/test_url_for_tools-ifc.test.js?param=value#about"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  target="_self"
  title={null}
>
  #about
</a>
`;

exports[`UU5.Bricks.Link href="ftp://example.com/folder" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href="ftp://example.com/folder"
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  ftp://example.com/folder
</a>
`;

exports[`UU5.Bricks.Link href="https://unicorn.com/" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href="https://unicorn.com/"
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  https://unicorn.com/
</a>
`;

exports[`UU5.Bricks.Link href="mailto:me@example.com" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href="mailto:me@example.com"
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  mailto:me@example.com
</a>
`;

exports[`UU5.Bricks.Link href="www.unicorn.com" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  href="http://example.com/www.unicorn.com"
  id="uuID"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  style={Object {}}
  target="_self"
  title={null}
>
  www.unicorn.com
</a>
`;

exports[`UU5.Bricks.Link id="myId" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="myId"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link ignoreHTML=false 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link ignoreHTML=true 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link mainAttrs=undefined 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link name="myName" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  name="myName"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel="bigBox" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel="bigBoxCollection" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel="box" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel="boxCollection" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel="container" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel="inline" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel="page" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel="smallBox" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel="smallBoxCollection" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link nestingLevel="spa" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link noIndex=false 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link noIndex=true 1`] = `
<a
  className="uu5-bricks-link uu5-noindex"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link offset=0 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link offset=70 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link props.Function UU5.Bricks.Link -  onClick() should be called 1`] = `
<Link
  content="www.unicorn.com"
  href="http://www.unicorn.com/"
  onClick={[Function]}
  onCtrlClick={[Function]}
  onWheelClick={[Function]}
/>
`;

exports[`UU5.Bricks.Link props.Function UU5.Bricks.Link -  onCtrlClick() should be called 1`] = `
<Link
  content="www.unicorn.com"
  href="http://www.unicorn.com/"
  onClick={[Function]}
  onCtrlClick={[Function]}
  onWheelClick={[Function]}
/>
`;

exports[`UU5.Bricks.Link props.Function UU5.Bricks.Link -  onWheelClick() should be called 1`] = `
<Link
  content="www.unicorn.com"
  href="http://www.unicorn.com/"
  onClick={[Function]}
  onCtrlClick={[Function]}
  onWheelClick={[Function]}
/>
`;

exports[`UU5.Bricks.Link pureRender=false 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link pureRender=true 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link selected=false 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link selected=true 1`] = `
<a
  className="uu5-bricks-link uu5-common-selected"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link smoothScroll=0 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link smoothScroll=3000 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link style="padding:8px; borderRadius: 2px" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link style={"backgroundColor":"red","color":"blue"} 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link target="_blank" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  rel="noopener"
  style={Object {}}
  target="_blank"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link target="_parent" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_parent"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link target="_self" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link target="_top" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_top"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link textCorrector=false 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link textCorrector=true 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title={null}
>
  noText
</a>
`;

exports[`UU5.Bricks.Link tooltip="My Tooltip" 1`] = `
<a
  className="uu5-bricks-link"
  download={false}
  id="uuID"
  style={Object {}}
  target="_self"
  title="My Tooltip"
>
  noText
</a>
`;
